--- a/bitcoin-candle-api/package.json
+++ b/bitcoin-candle-api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +17,16 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.3",
+    "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "@types/morgan": "^1.9.7",
+    "@types/node": "^20.8.9",
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1"
   }
 }
